--- a/tags.html
+++ b/tags.html
@@ -35,9 +35,9 @@
 
         <h3 style="color:Tomato;">2. Hello World</h3>
 
-        <p><strong>3. This text is my third additional tag!</strong></p>
+        <p><i>3. This text is my third additional tag!</i></p>
 
-        <p><small>4. This is my fourth additional tag.</small></p>
+        <p>4. This is<sub> my</sub> fourth <sup>additional tag.</sup></p>
 
         <h4>5. A list of my breakfast</h4>
         <ul>
